--- a/.gitconfig
+++ b/.gitconfig
@@ -79,3 +79,12 @@
 [user]
 	name = Jason Miller
 	email = jason@millerjb.com
+[diff]
+	tool = diffmerge
+[difftool "diffmerge"]
+	cmd = diffmerge \"$LOCAL\" \"$REMOTE\"
+[mergetool "diffmerge"]
+	cmd = "diffmerge --merge --result=\"$MERGED\" \"$LOCAL\" \"$(if test -f \"$BASE\"; then echo \"$BASE\"; else echo \"$LOCAL\"; fi)\" \"$REMOTE\""
+	trustExitCode = true
+[credential]
+	helper = osxkeychain
