don't keep .orig

--- a/.gitconfig
+++ b/.gitconfig
@@ -87,5 +87,6 @@
 [mergetool "diffmerge"]
 	cmd = "diffmerge --merge --result=\"$MERGED\" \"$LOCAL\" \"$(if test -f \"$BASE\"; then echo \"$BASE\"; else echo \"$LOCAL\"; fi)\" \"$REMOTE\""
 	trustExitCode = true
+	keepBackup = false
 [credential]
 	helper = osxkeychain
