--- a/.gitconfig
+++ b/.gitconfig
@@ -81,12 +81,23 @@
 	name = Jason Miller
 	email = jason@millerjb.com
 [diff]
-	tool = diffmerge
+	tool = p4mergetool
 [difftool "diffmerge"]
 	cmd = diffmerge \"$LOCAL\" \"$REMOTE\"
+[difftool "p4mergetool"]
+	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $LOCAL $REMOTE\n
+[merge]
+	# Include summaries of merged commits in newly created merge commit messages
+	log = true
+	tool = p4mergetool
+[mergetool]
+	keepBackup = false
 [mergetool "diffmerge"]
 	cmd = "diffmerge --merge --result=\"$MERGED\" \"$LOCAL\" \"$(if test -f \"$BASE\"; then echo \"$BASE\"; else echo \"$LOCAL\"; fi)\" \"$REMOTE\""
 	trustExitCode = true
 	keepBackup = false
+[mergetool "p4mergetool"]
+	cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $PWD/$BASE $PWD/$REMOTE $PWD/$LOCAL $PWD/$MERGED
+	trustExitCode = false
 [credential]
 	helper = osxkeychain
