--- a/.gitconfig
+++ b/.gitconfig
@@ -66,7 +66,7 @@
 	dd = daemon --base-path=. --export-all --reuseaddr --informative-errors --verbose
 
 	# lines of code since a tag (or since the beginning of time)
-	#loc = "!loc() { git log --numstat --pretty=\"%H\" ${1:-} ${1:-} | awk 'NF==3 {plus+=\$1; minus+=\$2} END {printf(\"+%d, -%d\n\", plus, minus)}'; }; loc"
+	loc = "!loc() { git log --numstat --pretty=\"%H\" ${1:-} ${1:-} | awk 'NF==3 {plus+=\$1; minus+=\$2} END {printf(\"+%d, -%d\n\", plus, minus)}'; }; loc"
 
 [apply]
 	# Detect whitespace errors when applying a patch
